--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -9,15 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.6",
+    "@ffmpeg/ffmpeg": "^0.12.10",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@supabase/supabase-js": "^2.43.5",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "fs": "^0.0.1-security",
+    "lamejs": "^1.2.1",
     "lucide-react": "^0.395.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.4",
+    "openai": "^4.51.0",
     "react": "^18",
     "react-dom": "^18",
+    "supabase": "^1.176.10",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
