--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -15,8 +15,6 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@supabase/supabase-js": "^2.43.4",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-icons": "^1.3.0",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -25,18 +23,17 @@
     "fs": "^0.0.1-security",
     "lamejs": "^1.2.1",
     "lucide-react": "^0.395.0",
-    "next": "^14.2.4",
+    "node": "^22.4.0",
     "openai": "^4.51.0",
-    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "supabase": "^1.176.10",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "next": "^14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
