--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -18,6 +18,7 @@
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "fast-levenshtein": "^3.0.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "fs": "^0.0.1-security",
